yaml_parser/tests/fail/tabs-that-look-like-indentation-7.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 3, column 5
  |
3 |   	b: 2
  |     ^
expected `...`
